    part if ite() statements in arrays; now also produces usable code for an "else" part, if available
added:
  - new functions rk.XML.valueselector(),  rk.XML.valueslot() and the combining rk.XML.values() to define
    <valueselector> and <valueslot> nodes, similar to rk.XML.varselector(),  rk.XML.varslot() and rk.XML.vars()
  - new functions rk.set.rkh.prompter() and rk.get.rkh.prompter() to make it easier to generate help files
    (later...)
  - rk.rkh.scan() (and automatically rk.plugin.skeleton() and rk.plugin.component()) are now capable of fetching
    text set with rk.set.rkh.prompter() and use it to generate help files
  - all functions scanned by rk.rkh.scan() for setting nodes in .rkh files have gained two additional arguments,
    "help" and "component", to register the text to be used via rk.set.rkh.prompter()
  - new function rk.XML.option() to allow setting and accessing IDs for single options as well
changed:
  - updated the plugin skeleton example script; e.g., it now uses the new .rkh file generating features

changes in version 0.06-4 (2014-09-14)
added:
  - new functions rk.set.language(), rk.get.language() and i18n() to
    facilitate static internationalisation of plugins; makes use of a new internal
    environment .rkdev.env
  - new parameter "lang" in functions rk.rkh.doc(), rk.XML.plugin(),
    rk.XML.pluginmap() and rk.plugin.skeleton() for internationalisation. if used, the
    attributes "lang" and "xml:lang" will be set in the <document> root of
    the generated files, respectively
  - new parameter "localized" in rk.XML.require() for internationalisation
  - the document id in rk.XML.pluginmap() can now be set manually
fixed:
  - abbreviation of labels now limits valid characters to [0-9A-Za-z]
  - in rk.XML.pluginmap(), "components" and "hierarchy" may be set to NULL if
    "require" is used accordingly

changes in version 0.06-3 (2013-12-21)
fixed:
  - fixed outdated example code for rk.plugin.component()
added: