@@ -54,6 +54,7 @@ export(rk.XML.radio)
 export(rk.XML.require)
 export(rk.XML.row)
 export(rk.XML.saveobj)
+export(rk.XML.select)
 export(rk.XML.set)
 export(rk.XML.snippet)
 export(rk.XML.snippets)
