@@ -16,12 +16,12 @@
 # along with rkwarddev.  If not, see <http://www.gnu.org/licenses/>.
 
 
-#' Create XML node "dropdown" for RKWard plugins
+#' Create XML node "select" for RKWard plugins
 #'
 #' @param label Character string, a text label for this plugin element.
 #' @param options A named list with options to choose from. The names of the list elements will become
-#'    labels of the options, \code{val} defines the value to submit if the option is checked, and
-#'    \code{chk=TRUE} should be set in the one option which is checked by default. Objects generated with
+#'    labels of the options, \code{val} defines the value to submit if the option is selected, and
+#'    \code{chk=TRUE} should be set in the one option which is selected by default. Objects generated with
 #'    \code{\link[rkwarddev:rk.XML.option]{rk.XML.option}} are accepted as well.
 #' @param id.name Character string, a unique ID for this plugin element.
 #'    If \code{"auto"} and a label was provided, an ID will be generated automatically from the label.
@@ -35,29 +35,29 @@
 #' @seealso \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 #' @export
 #' @examples
-#' test.dropdown <- rk.XML.dropdown("mydrop",
+#' test.select <- rk.XML.select("myselect",
 #'   options=list("First Option"=c(val="val1"),
 #'   "Second Option"=c(val="val2", chk=TRUE)))
-#' cat(pasteXML(test.dropdown))
+#' cat(pasteXML(test.select))
 
-rk.XML.dropdown <- function(label, options=list(label=c(val="", chk=FALSE)), id.name="auto", help=NULL, component=rk.get.comp()){
+rk.XML.select <- function(label, options=list(label=c(val="", chk=FALSE)), id.name="auto", help=NULL, component=rk.get.comp()){
   if(identical(id.name, "auto")){
-    id <- auto.ids(label, prefix=ID.prefix("dropdown"))
+    id <- auto.ids(label, prefix=ID.prefix("select"))
   } else {
     id <- id.name
   }
-  drp.attr.list <- list(id=id, label=label)
+  slct.attr.list <- list(id=id, label=label)
 
   # convert list elements into a list of XiMpLe nodes (if they aren't already)
-  dd.options <- rk.check.options(options, parent="dropdown")
+  sl.options <- rk.check.options(options, parent="select")
 
-  dropdown <- XMLNode("dropdown",
-      attrs=drp.attr.list,
-      .children=child.list(dd.options, empty=FALSE)
+  select <- XMLNode("select",
+      attrs=slct.attr.list,
+      .children=child.list(sl.options, empty=FALSE)
     )
 
   # check for .rkh content
   rk.set.rkh.prompter(component=component, id=id, help=help)
 
-  return(dropdown)
+  return(select)
 }
