@@ -20,7 +20,7 @@ This function will create a page node for wizard sections,
       with optional child nodes "browser", "checkbox",
 "column", "copy", "dropdown", "formula", "frame", "input", "page", "radio", "row",
       "saveobject",
-"spinbox", "stretch", "tabbook", "text", "valueselector", "valueslot",
+"select", "spinbox", "stretch", "tabbook", "text", "valueselector", "valueslot",
       "varselector" and "varslot".
 }
 \examples{
