@@ -1,18 +1,18 @@
 % Generated by roxygen2 (4.0.2): do not edit by hand
-\name{rk.XML.radio}
-\alias{rk.XML.radio}
-\title{Create XML node "radio" for RKWard plugins}
+\name{rk.XML.select}
+\alias{rk.XML.select}
+\title{Create XML node "select" for RKWard plugins}
 \usage{
-rk.XML.radio(label, options = list(label = c(val = NULL, chk = FALSE)),
+rk.XML.select(label, options = list(label = c(val = "", chk = FALSE)),
   id.name = "auto", help = NULL, component = rk.get.comp())
 }
 \arguments{
 \item{label}{Character string, a text label for this plugin element.}
 
 \item{options}{A named list with options to choose from. The names of the list elements will become
-labels of the options, \code{val} defines the value to submit if the option is checked,
+labels of the options, \code{val} defines the value to submit if the option is selected,
       and
-\code{chk=TRUE} should be set in the one option which is checked by default. Objects generated with
+\code{chk=TRUE} should be set in the one option which is selected by default. Objects generated with
 \code{\link[rkwarddev:rk.XML.option]{rk.XML.option}} are accepted as well.}
 
 \item{id.name}{Character string, a unique ID for this plugin element.
@@ -21,6 +21,8 @@ If \code{"auto"} and a label was provided,
 
 \item{help}{Character string,
       will be used as the \code{text} value for a setting node in the .rkh file.
+If set to \code{FALSE},
+      \code{\link[rkwarddev:rk.rkh.scan]{rk.rkh.scan}} will ignore this node.
 Also needs \code{component} to be set accordingly!}
 
 \item{component}{Character string,
@@ -32,20 +34,15 @@ accordingly, too!}
 An object of class \code{XiMpLe.node}.
 }
 \description{
-Create XML node "radio" for RKWard plugins
-}
-\note{
-It is also possible to address a particular option by giving it an ID, probably useful
-in logic sections. Have a look at \code{\link[rkwarddev:rk.XML.option]{rk.XML.option}} for details.
+Create XML node "select" for RKWard plugins
 }
 \examples{
-test.radio <- rk.XML.radio("Chose one",
+test.select <- rk.XML.select("myselect",
   options=list("First Option"=c(val="val1"),
   "Second Option"=c(val="val2", chk=TRUE)))
-cat(pasteXML(test.radio))
+cat(pasteXML(test.select))
 }
 \seealso{
-\code{\link[rkwarddev:rk.XML.option]{rk.XML.option}},
-   \href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
+\href{help:rkwardplugins}{Introduction to Writing Plugins for RKWard}
 }
 
